# HanoiTower-C

./: .gitignore  CMakeLists.txt  README.md
documents/: functional.md
src/: main.c
src/includes/: main.h
